--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
         <span class="navbar-brand">Hotel Reservation</span>
@@ -19,8 +20,30 @@
     <div class="text-center">
         <h2>Welcome to the Dashboard</h2>
         <p class="lead">You are now logged in.</p>
-        <!-- Add more dashboard features here (e.g. view reservations, make a booking, etc.) -->
+    </div>
+
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <div class="card-body text-center">
+                    <h5 class="card-title">View Available Rooms</h5>
+                    <p class="card-text">Browse available rooms and facilities.</p>
+                    <a href="rooms" class="btn btn-primary">View Rooms</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <div class="card-body text-center">
+                    <h5 class="card-title">My Bookings</h5>
+                    <p class="card-text">See your current and past bookings.</p>
+                    <a href="bookings" class="btn btn-primary">View Bookings</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
 </body>
 </html>
